tests/compile-fail/integration__integration__type_check__stackless__func_arg_neg_str.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: type error
   ┌─ <input>:13:22
   │
13 │       textSet(0, 0, -"abc");  
   │                     -^^^^^ a string
   │                     │ 
   │                     requires a numeric type


